Add content and styling to homepage

--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <title>Spectrum</title>
   <link href="style.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <header>
-      <div class="row">
-        <ul class="main-nav">
-          <li><a href=""> HOME </li>
-          <li><a href=""> ABOUT </li>
-          <li><a href=""> GALLERY </li>
-          <li><a href=""> PEOPLE </li>
-          <li><a href=""> FAQ </li>
-        </ul>
+  <link href="https://fonts.googleapis.com/css?family=Plaster" rel="stylesheet">
+</head>
+<body>
+  <header>
 
-      </div>
-    </header>
-  </body>
+    <div class="row">
+      <h1 id="logo">Spectrum</h1>
+      <ul class="main-nav">
+        <li>
+          <a href="index.html"> HOME </a>
+        </li>
+        <li>
+          <a href="artists.html"> ARTISTS </a>
+        </li>
+        <li>
+          <a href=""> VENUES </a>
+        </li>
+        <li>
+          <a href=""> GALLERY </a>
+        </li>
+        <li>
+          <a href=""> CONTACT </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <div id="welcome">
+    <p>
+      Be the first to capture your favorite new artist!
+    </p>
+  </div>
+  <ul id="about">
+    <li> Take photos ..</li>
+    <li> Something for artists</li>
+    <li> Discover your new favorite artist</li>
+  </ul>
+</body>
 </html>
