added artists page and some minor css changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     </p>
   </div>
   <ul id="about">
-    <li> Take photos ..</li>
+    <li> 
+      <h2> Take photos .. </h2>
+      <p> Some text </p>  
+    </li>
     <li> Something for artists</li>
     <li> Discover your new favorite artist</li>
   </ul>
@@ -118,8 +121,9 @@
       <div class="container2" style="background-color:white">
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email address" name="mail" required>
-        <label>
-          <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+        <label class="checkbox-text">
+          <span><input type="checkbox" checked="checked" name="subscribe"><p> Daily Newsletter </p></span> 
+          
         </label>
       </div>
 
