--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           <a href="artists.html"> ARTISTS </a>
         </li>
         <li>
-          <a href=""> VENUES </a>
+          <a href="venues.html"> VENUES </a>
         </li>
         <li>
-          <a href=""> GALLERY </a>
+          <a href="gallery.html"> GALLERY </a>
         </li>
         <li>
-          <a href=""> CONTACT </a>
+          <a href="contact.html"> CONTACT </a>
         </li>
       </ul>
     </div>
