Modified the bands page and added a css for it as well
Also added some socia media btns

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="index.html"> HOME </a>
         </li>
         <li>
-          <a href="artists.html"> ARTISTS </a>
+          <a href="bands.html"> BANDS </a>
         </li>
         <li>
           <a href="venues.html"> VENUES </a>
@@ -34,9 +34,9 @@
     </p>
   </div>
   <ul id="about">
-    <li> 
+    <li>
       <h2> Take photos .. </h2>
-      <p> Some text </p>  
+      <p> Some text </p>
     </li>
     <li> Something for artists</li>
     <li> Discover your new favorite artist</li>
@@ -110,7 +110,6 @@
   </div>
 
 
-
   <footer>
     <form action="action_page.php" id=Newsletter>
       <div class="container2">
@@ -122,8 +121,8 @@
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email address" name="mail" required>
         <label class="checkbox-text">
-          <span><input type="checkbox" checked="checked" name="subscribe"><p> Daily Newsletter </p></span> 
-          
+          <span><input type="checkbox" checked="checked" name="subscribe"><p> Daily Newsletter </p></span>
+
         </label>
       </div>
 
@@ -132,6 +131,9 @@
       </div>
     </form>
   </footer>
+
+
+
 </body>
 
 
