changes to bands

--- a/bands.html
+++ b/bands.html
@@ -15,7 +15,7 @@
           <a href="index.html"> HOME </a>
         </li>
         <li>
-          <a href=bands.html"> BANDS </a>
+          <a href="bands.html"> BANDS </a>
         </li>
         <li>
           <a href="venues.html"> VENUES </a>
