--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
   <!-- Container for the image gallery -->
-  <div class="container1" id=gallary>
+  <div class="container1" id="gallery">
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
