Changed the bands page

--- a/bands.html
+++ b/bands.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Bands</title>
-  <link href="bands.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Plaster" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <div class="row">
-      <h1 id="logo">Spectrum</h1>
-      <ul class="main-nav">
-        <li>
-          <a href="index.html"> HOME </a>
-        </li>
-        <li>
-          <a href=bands.html"> BANDS </a>
-        </li>
-        <li>
-          <a href="venues.html"> VENUES </a>
-        </li>
-        <li>
-          <a href="gallery.html"> GALLERY </a>
-        </li>
-        <li>
-          <a href="contact.html"> CONTACT </a>
-        </li>
-      </ul>
-    </div>
-  </header>
+<!-- MAIN (Center website) -->
+<link href="bands.css" rel="stylesheet" type="text/css">
+<div class="main">
 
+<h1>Bands</h1>
+<hr>
+
+<h2>Check out the budding bands around you</h2>
+<p>Resize the browser window to see the responsive effect.</p>
+
+<!-- Portfolio Gallery Grid -->
+<div class="row">
+  <div class="column">
+    <div class="content">
+      <img src="mountains.jpg" alt="Mountains" style="width:100%">
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="q.jpg" alt="Lights" style="width:100%">
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="2.jpg" alt="Nature" style="width:100%">
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <img src="3.jpg" alt="Mountains" style="width:100%">
+      <h3>My Work</h3>
+      <p>Lorem ipsum..</p>
+    </div>
+  </div>
+</div>
+
+<div class="content">
+  <img src="5.jpg" alt="Bear" style="width:100%">
+  <h3>Some Other Work</h3>
+  <p>Lorem ipsum..</p>
+</div>
+
+<!-- END MAIN -->
+</div>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
