--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
           <a href="index.html"> HOME </a>
         </li>
         <li>
-          <a href="bands.html"> BANDS </a>
+            <a href="gallery.html"> GALLERY </a>
         </li>
         <li>
-          <a href="venues.html"> VENUES </a>
+          <a href> BANDS </a>
         </li>
         <li>
-          <a href="gallery.html"> GALLERY </a>
+          <a href> VENUES </a>
+        </li>
         </li>
         <li>
           <a href="contact.html"> CONTACT </a>
@@ -70,7 +71,7 @@
 
     <div class="mySlides">
       <div class="numbertext">4 / 6</div>
-        <img src="4.jpg" style="width:100%">
+        <img src="alex.png" style="width:100%">
     </div>
 
     <div class="mySlides">
@@ -95,22 +96,22 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+        <img class="demo cursor" src="1.jpg" style="width:100%" onclick="currentSlide(1)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Trolltunga, Norway">
+        <img class="demo cursor" src="2.jpg" style="width:100%" onclick="currentSlide(2)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+        <img class="demo cursor" src="3.jpg" style="width:100%" onclick="currentSlide(3)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="alex.png" style="width:100%" onclick="currentSlide(4)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+        <img class="demo cursor" src="5.jpg" style="width:100%" onclick="currentSlide(5)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="6.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+        <img class="demo cursor" src="6.jpg" style="width:100%" onclick="currentSlide(6)">
       </div>
     </div>
   </div>
