--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Spectrum</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Plaster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -31,21 +32,24 @@
   </header>
   <div id="welcome">
     <p>
-      Be the first to capture your favorite new artist!
+      Be the first to capture your favorite new band!
     </p>
 
   </div>
   <ul id="about">
     <li>
       <h2> For photographers... </h2>
+      <br/>
       <p> Capture and share photos of local musicians around the city</p>
     </li>
     <li> 
       <h2> For musicians... </h2>
-      <p> Promote and cherish your moments </p>
+      <br/>
+      <p> Cherish your stage moments and promote your band </p>
          
     <li> 
-      <h2>For music lovers...</h2>
+      <h2>For everyone...</h2>
+      <br/>
       <p> Discover your new favorite artist and stay tuned for their upcoming gigs</p>
   </ul>
 
@@ -56,32 +60,32 @@
     <!-- Full-width images with number text -->
     <div class="mySlides">
       <div class="numbertext">1 / 6</div>
-        <img src="1.jpg" style="width:100%">
+        <img src="12.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 6</div>
-        <img src="2.jpg" style="width:100%">
+        <img src="11.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 6</div>
-        <img src="3.jpg" style="width:100%">
+        <img src="13.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 6</div>
-        <img src="alex.png" style="width:100%">
+        <img src="14.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">5 / 6</div>
-        <img src="5.jpg" style="width:100%">
+        <img src="16.png" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">6 / 6</div>
-        <img src="6.jpg" style="width:100%">
+        <img src="17.png" style="width:100%">
     </div>
 
     <!-- Next and previous buttons -->
@@ -96,29 +100,29 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="1.jpg" style="width:100%" onclick="currentSlide(1)">
+        <img class="demo cursor" src="12.png" style="width:100%" onclick="currentSlide(1)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="2.jpg" style="width:100%" onclick="currentSlide(2)">
+        <img class="demo cursor" src="11.png" style="width:100%" onclick="currentSlide(2)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="3.jpg" style="width:100%" onclick="currentSlide(3)">
+        <img class="demo cursor" src="13.png" style="width:100%" onclick="currentSlide(3)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="alex.png" style="width:100%" onclick="currentSlide(4)">
+        <img class="demo cursor" src="14.png" style="width:100%" onclick="currentSlide(4)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="5.jpg" style="width:100%" onclick="currentSlide(5)">
+        <img class="demo cursor" src="16.png" style="width:100%" onclick="currentSlide(5)">
       </div>
       <div class="column">
-        <img class="demo cursor" src="6.jpg" style="width:100%" onclick="currentSlide(6)">
+        <img class="demo cursor" src="17.png" style="width:100%" onclick="currentSlide(6)">
       </div>
     </div>
   </div>
 
 
   <footer>
-    <form action="action_page.php" id=Newsletter>
+    <form id=Newsletter>
       <div class="container2">
         <h2>Subscribe to our Newsletter</h2>
         <p>We will update you with photos of budding bands</p>
