add googleform to contact page

--- a/contact.html
+++ b/contact.html
@@ -33,32 +33,8 @@
                   </div>
                 </header>
 
-                <body id="contactid">
-                  <div class="row">
-        <div class="column">
-          <div class="card">
-            <img src="img.jpg" alt="Jane" style="width:100%">
-            <div class="container">
-              <h2>Eunhye Kim</h2>
-              <p class="title">Founder</p>
-              <p class="info">For band-related inquiries,</p>
-              <p class="info">contact: example@example.com</p>
-              <p><button class="button">Contact</button></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="column">
-          <div class="card">
-            <img src="img.jpg" alt="Mike" style="width:100%">
-            <div class="container">
-              <h2>Xu Zhao</h2>
-              <p class="title">Founder </p>
-              <p class="info">For photographer-related inquiries,</p>
-              <p class="info">contact: example@example.com</p>
-              <p><button class="button">Contact</button></p>
-            </div>
-          </div>
-        </div>
-      </div>
+                <body >
+                  <div id="contact-form">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYuATNwzU_OhazDGQ2wkV_wxJKHAXnbXMv30qJo9wwGQ2v_A/viewform?embedded=true" >Loading...</iframe>
+    </div>
                 </body>
