change band name video to the snites

--- a/gallery.html
+++ b/gallery.html
@@ -35,28 +35,28 @@
 <h2 id="gallery-box"></h2>
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn" onclick="filterSelection('Video')"> Video</button>
+  <button class="btn" onclick="filterSelection('TheSnites')"> The Snites</button>
   <button class="btn" onclick="filterSelection('ThreeTribes')"> Three tribes</button>
   <button class="btn" onclick="filterSelection('Powpowmandy')"> Pow Pow Mandy</button>
 </div>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
-  <div class="column Video">
+  <div class="column TheSnites">
     <div class="content">
       <img src="11.png" alt="Alex" style="width:100%">
       <h4>Mountains</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column Video">
+  <div class="column TheSnites">
     <div class="content">
       <img src="12.png" alt="Alex2" style="width:100%">
       <h4>Lights</h4>
       <p>Lorem ipsum dolor..</p>
     </div>
   </div>
-  <div class="column Video">
+  <div class="column TheSnites">
     <div class="content">
       <img src="20.png" alt="Alex3" style="width:100%">
       <h4>Forest</h4>
